--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "express-jwt": "^3.0.0",
     "express-session": "^1.11.3",
     "fs-readfile-promise": "^2.0.1",
+    "grunt-jasmine-node": "^0.3.1",
     "jade": "^1.11.0",
+    "jasmine-node": "^1.14.5",
     "jsonwebtoken": "^5.0.0",
     "lodash": "^3.10.1",
     "lusca": "^1.3.0",
