--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "jasmine-node": "^1.14.5",
     "jsonwebtoken": "^5.0.0",
     "lodash": "^3.10.1",
+    "log4js": "^0.6.32",
     "lusca": "^1.3.0",
     "method-override": "^2.3.5",
     "mongoose": "^4.1.2",
@@ -29,10 +30,12 @@
     "passport-google-oauth": "~0.2.0",
     "passport-local": "^1.0.0",
     "passport-twitter": "^1.0.3",
+    "rx": "^4.0.8",
     "serve-favicon": "^2.3.0",
     "socket.io": "^1.3.5",
     "socket.io-client": "^1.3.5",
-    "socketio-jwt": "^4.2.0"
+    "socketio-jwt": "^4.2.0",
+    "stream-json": "^0.4.0"
   },
   "devDependencies": {
     "autoprefixer": "^6.0.0",
