--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "connect-mongo": "^0.8.1",
     "cookie-parser": "^1.3.5",
     "errorhandler": "^1.4.2",
+    "eventemitter2": "^1.0.0",
     "express": "^4.13.3",
     "express-jwt": "^3.0.0",
     "express-session": "^1.11.3",
